--- a/css/shop-pc.css
+++ b/css/shop-pc.css
@@ -4,7 +4,7 @@
 /*--------------------------------------------------------------------------------------------------------------
 *  Template
 *--------------------------------------------------------------------------------------------------------------*/
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1025px) {
   html {
     font-size: 22px;
   }
@@ -260,32 +260,67 @@
     margin-top: 3.63636364rem;
   }
   .container .wrap section article .num-wrap {
-    width: 20rem;
+    width: 5.45454545rem;
     height: 2.27272727rem;
     margin-bottom: 0.54545455rem;
-  }
-  .container .wrap section article .num-wrap span {
-    width: 1.54545455rem;
-    height: 1.13636364rem;
-  }
-  .container .wrap section article .num-wrap span:after {
-    width: 0.63636364rem;
-    height: 0.63636364rem;
-  }
-  .container .wrap section article .num-wrap span.up:after {
-    left: 0rem;
-    bottom: 0.04545455rem;
-    right: auto;
-    top: auto;
-  }
-  .container .wrap section article .num-wrap span.down:after {
-    left: 0rem;
-    top: 0.04545455rem;
-    right: auto;
+    right: 0rem;
+    top: 0.81818182rem;
+    left: auto;
     bottom: auto;
+  }
+  .container .wrap section article .num-wrap a {
+    width: 1.68181818rem;
+    height: 2.27272727rem;
+  }
+  .container .wrap section article .num-wrap a:after {
+    content: '';
+    display: block;
+    width: 0.77272727rem;
+    height: 0.77272727rem;
+    top: 0.77272727rem;
+  }
+  .container .wrap section article .num-wrap a.up:after {
+    right: 0.90909091rem;
+  }
+  .container .wrap section article .num-wrap a.down:after {
+    left: 0.90909091rem;
   }
   .container .wrap section article .num-wrap input {
     font-size: 0.68181818rem;
+  }
+  .container .wrap section article .num-select {
+    width: 100%;
+    height: 2.27272727rem;
+    margin-bottom: 0.54545455rem;
+  }
+  .container .wrap section article .num-select:after {
+    content: '';
+    display: block;
+    width: 0.77272727rem;
+    height: 0.77272727rem;
+    right: 0.72727273rem;
+    top: 0.68181818rem;
+    left: auto;
+    bottom: auto;
+  }
+  .container .wrap section article .num-select .label {
+    font-size: 0.68181818rem;
+    line-height: 2.27272727rem;
+    letter-spacing: -1%;
+    padding-left: 0.90909091rem;
+  }
+  .container .wrap section article .num-select .opt-list {
+    left: -0.04545455rem;
+    top: 2.18181818rem;
+    right: auto;
+    bottom: auto;
+    width: 20rem;
+    height: 0rem;
+  }
+  .container .wrap section article .num-select .opt-list .opt-item {
+    font-size: 0.68181818rem;
+    height: 2.27272727rem;
+    line-height: 2.27272727rem;
     padding-left: 0.90909091rem;
   }
   .container .wrap section.terms-cnt {
