--- a/css/shop-pc.less
+++ b/css/shop-pc.less
@@ -28,7 +28,7 @@
     .wrap { .min-w(1080); .min-h(1080);
       header { .wh(100%,80); .-b(#EEEEEE);
         .h-inner { .wh(1080,80); .mh-c;
-          h1 { .wh(160,80);
+          h1 { .wh(160,80); .lt;
             &:after { .cnt; .wh(160,40); .lt(0,20); }
           }
           .my-point { .fs(15); .lh(80); .rt; }
